--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
 
     <TextView
         android:id="@+id/textView"
+        android:text="Проверка языка"
         android:layout_width="259dp"
         android:layout_height="97dp"
         android:layout_marginBottom="296dp"
